# gcode-metadata

./: .pre-commit-config.yaml  ChangeLog  LICENSE  MANIFEST.in  README.md  metadata.py  pyproject.toml  setup.py
.github/workflows/: python-tests.yml  rebase.yml
core/: __init__.py  metadata.py
gcode_metadata/: __init__.py  metadata.py
tests/: test_metadata.py
tests/gcodes/: .fdn_filename.gcode.cache  Shape-Box.sl1  full_m73_layers_0.2mm_PLA_MK3SMMU2S_11m.gcode  mmu_attribute_test.gcode
